<resources>
    <string name="app_name">My Application1024</string>
    <string name="favSeasons">Which season do you like?</string>
    <string name="typeName">Type your name here</string>
    <string name="seasonSum">Summer</string>
    <string name="seasonSpr">Spring</string>
    <string name="seasonFall">Fall</string>
    <string name="seasonWin">Winter</string>
    <string name="userName">Name</string>
</resources>
